frontpage matters changed

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -608,7 +608,7 @@ author=,date=,id=,replyto=,type=}{}%
 
 
 \begin{flushright}
-  \textbf{Date:} January 2016 
+  \textbf{Date:} August 2017 
 \end{flushright}
 
 \begin{flushleft}
@@ -626,7 +626,7 @@ author=,date=,id=,replyto=,type=}{}%
 
 \bigskip
 
-\textsf{\textit{\fontsize{16}{16}\selectfont{}FTF -- Beta}}
+\textsf{{\fontsize{14}{16}\selectfont{}Version 1.0}}
 %Version \version %DIFDELCMD < 
 
 
@@ -639,7 +639,7 @@ author=,date=,id=,replyto=,type=}{}%
 \vskip 6pt 
 \nointerlineskip
 \begin{onehalfspace}
-\textsf{\textbf{OMG Document Number:}}    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
+\textsf{\textbf{OMG Document Number: ptc/2017-08-02}}    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
 \textsf{\textbf{Standard document URL: \ \url{http://www.omg.org/spec/DOL/1.0/PDF}}} \\
 \textsf{\textbf{Machine Consumable File(s): \\ 
 \leftskip2em Normative:  \\
@@ -653,12 +653,13 @@ Informative: \\
 \vskip\medskipamount % ditto
 \nointerlineskip
 
-This OMG document replaces the submission document (ad/2015-10-01). It is an OMG Adopted Beta specification and is currently in the finalization phase. Comments on the content of this document are welcome, and should be directed to \url{issues@omg.org} by March 28, 2016. 
+This OMG document replaces the OMG Adopted Beta specification (ptc/2016-02-37). It contains only minor revisions.  
+%It is an OMG Adopted Beta specification and is currently in the finalization phase. Comments on the content of this document are welcome, and should be directed to \url{issues@omg.org} by March 28, 2016. 
 
-You may view the pending issues for this specification from the OMG revision issues web page %http://www.omg.org/issues/
-\url{http://issues.omg.org/browse/DOL}.
+%You may view the pending issues for this specification from the OMG revision issues web page %http://www.omg.org/issues/
+%\url{http://issues.omg.org/browse/DOL}.
 
-The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
+%The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
 
 \end{flushleft}
 
@@ -671,12 +672,12 @@ The FTF Recommendation and Report for this specification will be published on Se
 \pagenumbering{roman} 
   
 
-\noindent Copyright \copyright 2014-15, Object Management Group, Inc.\\
-Copyright \copyright 2014-15, Fraunhofer FOKUS\\
-Copyright \copyright 2014-15, MITRE\\
-Copyright \copyright 2014-15, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
-Copyright \copyright 2014-15, Thematix Partners LLC \\
-Copyright \copyright 2014-15, Athan Services \\
+\noindent Copyright \copyright 2014-17, Object Management Group, Inc.\\
+Copyright \copyright 2014-17, Fraunhofer FOKUS\\
+Copyright \copyright 2014-17, MITRE\\
+Copyright \copyright 2014-17, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
+Copyright \copyright 2014-17, Thematix Partners LLC \\
+Copyright \copyright 2014-17, Athan Services \\
 
 
 
