--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -635,10 +635,12 @@ author=,date=,id=,replyto=,type=}{}%
 
 \pagestyle{headings}  %%% switches on printing of running heads
 
-
+\bc{98}
 \begin{flushright}
-  \textbf{Date:} January 2016 
-\end{flushright}
+  \textbf{Date:} \DIFdelbegin \DIFdel{January 2016 
+}\DIFdelend \DIFaddbegin \DIFadd{August 2017 
+}\DIFaddend \end{flushright}
+\ec
 
 \begin{flushleft}
   \begin{figure}[h]
@@ -655,7 +657,12 @@ author=,date=,id=,replyto=,type=}{}%
 
 \bigskip
 
-\textsf{\textit{\fontsize{16}{16}\selectfont{}FTF -- Beta}}
+\bc{98}
+\textsf{\DIFdelbegin \textit{%DIFDELCMD < \fontsize{16}{16}\selectfont{}%%%
+\DIFdel{FTF -- Beta}}%DIFAUXCMD
+  \DIFdelend \DIFaddbegin {\fontsize{14}{16}\selectfont{}\DIFadd{Version 1.0}}\DIFaddend }
+\ec
+
 %Version \version %DIFDELCMD < 
 
 
@@ -667,8 +674,10 @@ author=,date=,id=,replyto=,type=}{}%
 \leaders\vrule width \textwidth\vskip1pt %%% or other desired thickness
 \vskip 6pt 
 \nointerlineskip
+\bc{98}
 \begin{onehalfspace}
-\textsf{\textbf{OMG Document Number:}}    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
+\textsf{\DIFdelbegin \textbf{\DIFdel{OMG Document Number:}}%DIFAUXCMD
+\DIFdelend \DIFaddbegin \textbf{\DIFadd{OMG Document Number: ptc/2017-08-02}}\DIFaddend }    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
 \textsf{\textbf{Standard document URL: \ \url{http://www.omg.org/spec/DOL/1.0/PDF}}} \\
 \textsf{\textbf{Machine Consumable File(s): \\ 
 \leftskip2em Normative:  \\
@@ -676,18 +685,30 @@ author=,date=,id=,replyto=,type=}{}%
 Informative: \\
 \url{http://www.omg.org/spec/DOL/20151109/DOL-terms.rdf} \\}}
 \end{onehalfspace} 
+\ec
 
 \vskip 28pt
 \leaders\vrule width \textwidth\vskip1pt % or other desired thickness
 \vskip\medskipamount % ditto
 \nointerlineskip
 
-This OMG document replaces the submission document (ad/2015-10-01). It is an OMG Adopted Beta specification and is currently in the finalization phase. Comments on the content of this document are welcome, and should be directed to \url{issues@omg.org} by March 28, 2016. 
+\bc{98}
+This OMG document replaces the \DIFdelbegin \DIFdel{submission document (ad}\DIFdelend \DIFaddbegin \DIFadd{OMG Adopted Beta specification (ptc}\DIFaddend /\DIFdelbegin \DIFdel{2015-10-01}\DIFdelend \DIFaddbegin \DIFadd{2016-02-37}\DIFaddend ). It \DIFdelbegin \DIFdel{is an OMG Adopted Beta specification and is currently in the finalization phase.  
+Comments on the content of this document are welcome, and should be directed to }%DIFDELCMD < \url{issues@omg.org} %%%
+\DIFdel{by March 28, 2016. 
+}\DIFdelend \DIFaddbegin \DIFadd{contains only minor revisions.  
+%DIF > It is an OMG Adopted Beta specification and is currently in the finalization phase. Comments on the content of this document are welcome, and should be directed to \url{issues@omg.org} by March 28, 2016. 
+}\DIFaddend 
 
-You may view the pending issues for this specification from the OMG revision issues web page %http://www.omg.org/issues/
-\url{http://issues.omg.org/browse/DOL}.
+\DIFdelbegin \DIFdel{You may view the pending issues for this specification from the OMG revision issues web page %DIF < http://www.omg.org/issues/
+}%DIFDELCMD < \url{http://issues.omg.org/browse/DOL}%%%
+\DIFdel{.
+}\DIFdelend %DIF > You may view the pending issues for this specification from the OMG revision issues web page %http://www.omg.org/issues/
+%DIF > \url{http://issues.omg.org/browse/DOL}.
 
-The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
+\DIFdelbegin \DIFdel{The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
+}\DIFdelend %DIF > The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
+\ec
 
 \end{flushleft}
 
@@ -699,15 +720,16 @@ The FTF Recommendation and Report for this specification will be published on Se
 
 \pagenumbering{roman} 
 
+\bc{98}
 
-\noindent Copyright \copyright 2014-15, Object Management Group, Inc.\\
-Copyright \copyright 2014-15, Fraunhofer FOKUS\\
-Copyright \copyright 2014-15, MITRE\\
-Copyright \copyright 2014-15, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
-Copyright \copyright 2014-15, Thematix Partners LLC \\
-Copyright \copyright 2014-15, Athan Services \\
+\noindent Copyright \copyright \DIFdelbegin \DIFdel{2014-15}\DIFdelend \DIFaddbegin \DIFadd{2014-17}\DIFaddend , Object Management Group, Inc.\\
+Copyright \copyright \DIFdelbegin \DIFdel{2014-15}\DIFdelend \DIFaddbegin \DIFadd{2014-17}\DIFaddend , Fraunhofer FOKUS\\
+Copyright \copyright \DIFdelbegin \DIFdel{2014-15}\DIFdelend \DIFaddbegin \DIFadd{2014-17}\DIFaddend , MITRE\\
+Copyright \copyright \DIFdelbegin \DIFdel{2014-15}\DIFdelend \DIFaddbegin \DIFadd{2014-17}\DIFaddend , Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
+Copyright \copyright \DIFdelbegin \DIFdel{2014-15}\DIFdelend \DIFaddbegin \DIFadd{2014-17}\DIFaddend , Thematix Partners LLC \\
+Copyright \copyright \DIFdelbegin \DIFdel{2014-15}\DIFdelend \DIFaddbegin \DIFadd{2014-17}\DIFaddend , Athan Services \\
 
-
+\ec
 
 \OMGparagraph{USE OF SPECIFICATION - TERMS, CONDITIONS \& NOTICES}
 The material in this document details an Object Management Group specification in accordance with
