manual changes to diff file

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -635,12 +635,12 @@ author=,date=,id=,replyto=,type=}{}%
 
 \pagestyle{headings}  %%% switches on printing of running heads
 
-\bc{98}
+%\bc{98}
 \begin{flushright}
   \textbf{Date:} \DIFdelbegin \DIFdel{January 2016 
 }\DIFdelend \DIFaddbegin \DIFadd{August 2017 
 }\DIFaddend \end{flushright}
-\ec
+%\ec
 
 \begin{flushleft}
   \begin{figure}[h]
@@ -657,11 +657,11 @@ author=,date=,id=,replyto=,type=}{}%
 
 \bigskip
 
-\bc{98}
+%\bc{98}
 \textsf{\DIFdelbegin \textit{%DIFDELCMD < \fontsize{16}{16}\selectfont{}%%%
 \DIFdel{FTF -- Beta}}%DIFAUXCMD
   \DIFdelend \DIFaddbegin {\fontsize{14}{16}\selectfont{}\DIFadd{Version 1.0}}\DIFaddend }
-\ec
+%\ec
 
 %Version \version %DIFDELCMD < 
 
@@ -674,7 +674,7 @@ author=,date=,id=,replyto=,type=}{}%
 \leaders\vrule width \textwidth\vskip1pt %%% or other desired thickness
 \vskip 6pt 
 \nointerlineskip
-\bc{98}
+%\bc{98}
 \begin{onehalfspace}
 \textsf{\DIFdelbegin \textbf{\DIFdel{OMG Document Number:}}%DIFAUXCMD
 \DIFdelend \DIFaddbegin \textbf{\DIFadd{OMG Document Number: ptc/2017-08-02}}\DIFaddend }    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
@@ -685,15 +685,15 @@ author=,date=,id=,replyto=,type=}{}%
 Informative: \\
 \url{http://www.omg.org/spec/DOL/20151109/DOL-terms.rdf} \\}}
 \end{onehalfspace} 
-\ec
+%\ec
 
 \vskip 28pt
 \leaders\vrule width \textwidth\vskip1pt % or other desired thickness
 \vskip\medskipamount % ditto
 \nointerlineskip
 
-\bc{98}
-This OMG document replaces the \DIFdelbegin \DIFdel{submission document (ad}\DIFdelend \DIFaddbegin \DIFadd{OMG Adopted Beta specification (ptc}\DIFaddend /\DIFdelbegin \DIFdel{2015-10-01}\DIFdelend \DIFaddbegin \DIFadd{2016-02-37}\DIFaddend ). It \DIFdelbegin \DIFdel{is an OMG Adopted Beta specification and is currently in the finalization phase.  
+%\bc{98}
+This OMG document replaces the \DIFaddbegin \DIFadd{OMG Adopted Beta specification (ptc/2016-02-37)}\DIFaddend \DIFdelbegin \DIFdel{submission document (ad /2015-10-01)}\DIFdelend . It \DIFdelbegin \DIFdel{is an OMG Adopted Beta specification and is currently in the finalization phase.  
 Comments on the content of this document are welcome, and should be directed to }%DIFDELCMD < \url{issues@omg.org} %%%
 \DIFdel{by March 28, 2016. 
 }\DIFdelend \DIFaddbegin \DIFadd{contains only minor revisions.  
@@ -708,7 +708,7 @@ Comments on the content of this document are welcome, and should be directed to 
 
 \DIFdelbegin \DIFdel{The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
 }\DIFdelend %DIF > The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
-\ec
+%\ec
 
 \end{flushleft}
 
