--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1578,7 +1578,7 @@ of logic (model theory). In this document, we use the term \termref{realization}
 	An OMS is either a basic OMS (which is always a native OMS, and can occur as a text fragment in a \DOL document) or a structured OMS (which can be either a native structured OMS contained in some native document, or a \DOL structured OMS contained in a \DOL document).
 \end{note}
 \begin{note}
-	An OMS has a single signature and model class over that signature as its model-theoretic semantics.
+	An OMS has a single signature and realisation class over that signature as its model-theoretic semantics.
 \end{note}
 \end{definitions}
 
@@ -6985,7 +6985,7 @@ The theory-level semantics for $O$ cannot be defined.
 
 The semantics of $O$
 is defined similarly for the other three alternatives of $O.\syntax{closureType}$, 
-only the model class differs:
+only the realisation class differs:
 \begin{itemize}
 \item if $O.\syntax{closureType} = \syntax{maximize}$,
 $\cM'' = 
