in the semantics, Mod -> Real

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -398,7 +398,7 @@ author=,date=,id=,replyto=,type=}{}%
 %% from HetCASL summary
 \newcommand{\Si}{\Sigma}
 \newcommand{\al}{\alpha}
-\newcommand{\ModFunctor}{\mathbf{Mod}}
+\newcommand{\ModFunctor}{\mathbf{Real}}
 \newcommand{\SenFunctor}{\mathbf{Sen}}
 \newcommand{\Sig}{\mathsf{Sig}}
 \renewcommand{\Th}{\mathsf{Th}}
