--- a/Standard/hetonto-subset.sty
+++ b/Standard/hetonto-subset.sty
@@ -25,11 +25,11 @@
 %%%%%%%%%%%%%%% institutions %%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\iso}{\cong}
-\newcommand{\IMod}{\mathbf{Mod}}
+\newcommand{\IMod}{\mathbf{Real}}
 \newcommand{\Mod}{\IMod}
 \newcommand{\Th}{\mathbf{Th}}
 \newcommand{\Sen}{\mathbf{Sen}}
-\newcommand{\ModFun}[1]{\mathbf{Mod}(#1)}
+\newcommand{\ModFun}[1]{\mathbf{Real}(#1)}
 \newcommand{\SenFun}[1]{\mathbf{Sen}(#1)}
 \newcommand{\Sign}{\mathbf {Sign}}
 \newcommand{\sen}{\mathbf {Sen}}
@@ -239,7 +239,7 @@
 \def\N{\mathbb{N}}
 \def\Sen{\mathsf{Sen}}
 \def\Pr{\mathsf{Pr}}
-\def\Mod{\mathsf{Mod}}
+\def\Mod{\mathsf{Real}}
 \def\Set{\mathbb{S}et}
 \def\Cat{\mathbb{C}at}
 \def\CAT{\mathbb{CAT}}
@@ -386,7 +386,7 @@
 \newcommand{\Thing}{{Thing} \xspace}
 
 \newcommand{\category}[1]{\ensuremath{\mathbf{#1}}\xspace}
-\newcommand{\Models}{\ensuremath{\text{Mod}}\xspace}
+\newcommand{\Models}{\ensuremath{\text{Real}}\xspace}
 
 
 %%%%%% refinement
